--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,30 @@
 // app global css in SCSS form
+
+.small-screen-only{
+    @media (max-width:$breakpoint-xs-max){
+        display:block;
+    }
+
+    @media (max-width:$breakpoint-sm-max){
+        display:none;
+    }
+    @media (max-width:$breakpoint-md-min){
+        display:none;
+    }
+}
+ 
+.large-screen-only{
+    @media (max-width:$breakpoint-xs-max){
+        display:none;
+    }
+    @media (max-width:$breakpoint-sm-min){
+        display:none;
+    }
+    @media (max-width:$breakpoint-md-min){
+        display:none;
+    }
+    @media (min-width:$breakpoint-md-max){
+        display:block;
+    }
+}
+ 
