--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -20,11 +20,42 @@
     @media (max-width:$breakpoint-sm-min){
         display:none;
     }
-    @media (max-width:$breakpoint-md-min){
+    @media (max-width:822px){
         display:none;
     }
+    @media (min-width:$breakpoint-sm-max){
+        display:block;
+    }
+    @media (min-width:$breakpoint-md-min){
+        display:block;
+    } 
     @media (min-width:$breakpoint-md-max){
         display:block;
+    }
+}
+
+.small-screen-padding{
+    @media (max-width:808px){
+        padding: 0px !important;
+    }
+    @media (max-width:999px){
+        padding: 46px !important;
+    }
+    @media (max-width:1520px){
+        padding: 16px !important;
+    }
+    @media (max-width:1520px){
+        padding: 16px !important;
+    }
+    @media (max-width:1177px){
+        width: 454px !important;
+    }
+}
+
+.credit-card-large-screen{
+    @media (max-width:600px){
+    width: 414px;
+
     }
 }
  
