--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -20,7 +20,7 @@
     @media (max-width:$breakpoint-sm-min){
         display:none;
     }
-    @media (max-width:822px){
+    @media (max-width:714px){
         display:none;
     }
     @media (min-width:$breakpoint-sm-max){
@@ -39,18 +39,20 @@
         padding: 0px !important;
     }
     @media (max-width:999px){
-        padding: 46px !important;
+        padding: 0px !important;
     }
-    @media (max-width:1520px){
-        padding: 16px !important;
-    }
-    @media (max-width:1520px){
-        padding: 16px !important;
-    }
-    @media (max-width:1177px){
-        width: 454px !important;
-    }
+   @media (min-width:1100px) {
+       width: 906px;
+   }
+    // @media (max-width:1120px){
+    //     padding: 0px !important;
+    // }
+    // @media (min-width:1120px){
+    //     padding: 8px !important;
+    
+    // }
 }
+
 
 .credit-card-large-screen{
     @media (max-width:600px){
