--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -11,6 +11,13 @@
     @media (max-width:$breakpoint-md-min){
         display:none;
     }
+    @media (max-width:700px){
+
+display: block;
+    }
+    @media (min-width:701px){
+        display: none !important;
+    }
 }
  
 .large-screen-only{
@@ -44,13 +51,7 @@
    @media (min-width:1100px) {
        width: 906px;
    }
-    // @media (max-width:1120px){
-    //     padding: 0px !important;
-    // }
-    // @media (min-width:1120px){
-    //     padding: 8px !important;
-    
-    // }
+  
 }
 
 
